# mcu

./: .gitignore  CMakeLists.txt  README.org  adc_intf.v  cdc_capt_sync.v  mcu_adc_const_pkg.v  mcu_sysctrl.v
cmake/: AddLogic.cmake
design/: mcu_rtl.vc
design/system/verilog/: adc_intf.v  cdc_capt_sync.v  mcu_sysctrl_const_pkg.v
rtl/: CMakeLists.txt
rtl/design/: mcu_rtl.vc
rtl/design/defs/verilog/: mcu_defs.v
rtl/design/system/verilog/: mcu_sysctrl.v  mcu_system.v
rtl/model/: README.org
